--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>vue-use-async-task</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>useAsyncTask Demo</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
