--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>useAsyncTask Demo</title>
+
+    <style>
+      body {
+        font-family: ui-sans, sans-serif;
+        font-size: 1.05em;
+        line-height: 1.5em;
+        margin: auto;
+        max-width: 70ch;
+        padding: 4rem 1rem;
+        > :first-child {
+          margin-top: 0;
+        }
+        > :last-child {
+          margin-bottom: 0;
+        }
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 2em 0 1rem;
+      }
+      article,
+      blockquote,
+      header,
+      footer,
+      ol,
+      ul,
+      hr,
+      p,
+      pre {
+        margin: 1.5em 0;
+      }
+      *,
+      ::before,
+      ::after {
+        box-sizing: border-box;
+      }
+    </style>
   </head>
+
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
   </body>
+
+  <script type="module" src="./www/demo.js"></script>
 </html>
